<resources>
    <string name="app_name">PR015</string>
    <string name="textView2Text">Edad</string>
    <string name="textView5Text">DNI</string>
    <string name="textView4Text">Nombre</string>
    <string name="buttonText">Obtener</string>
    <string name="button2Text">Enviar</string>
    <string name="textView10Text">Sexo</string>
    <string name="textView11Text">Genero</string>

    <string-array name="sexo">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>
</resources>
