<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginBottom="@dimen/commonMarginBot"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView2Text"
        android:id="@+id/textView2"
        android:layout_above="@+id/textView"
        android:layout_marginBottom="@dimen/commonMarginBot"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="@dimen/textView3Text"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_above="@+id/textView2"
        android:layout_marginBottom="@dimen/commonMarginBot"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView4Text"
        android:id="@+id/textView4"
        android:layout_above="@+id/textView3"
        android:layout_marginBottom="@dimen/commonMarginBot"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_marginBottom="@dimen/commonMarginBot"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView5Text"
        android:id="@+id/textView5"
        android:layout_above="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonText"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView11Text"
        android:id="@+id/textView11"
        android:layout_marginBottom="@dimen/commonMarginBot"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

</RelativeLayout>
